--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "playwright",
+  "name": "playwright-tests",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.45.0",
+    "@playwright/test": "^1.46.1",
     "@types/node": "^20.14.9",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
